<resources>
    <string name="app_name">RegistroProductoParcia_1</string>
    <string name="action_settings">Configuracion</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">1ro Fragment</string>
    <string name="second_fragment_label">2do Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hola Mario</string>
    <string name="hello_second_fragment">Hola </string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="TituloFragmentRegistroProducto">Registro Producto</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ProductoID">ProductoID</string>
    <string name="ProductoDescripcion">Descripcion </string>
    <string name="ProductoExistencia">Existencia </string>
    <string name="ProductoCosto">Costo</string>
    <string name="ProductoInventario">Valor Inventario</string>
    <string name="Guardar">Guardar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Nuevo">Nuevo</string>
    <string name="MenuInformacion">Informacion</string>
    <string name="MenuAgregarProducto">Agregar Producto</string>

</resources>