<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_claro"
    tools:context=".ui.ProductoEditFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescripcion"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextLayoutDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ProductoDescripcion"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutExistencia"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescripcion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextLayoutExistencia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ProductoExistencia"

            android:inputType="number"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCosto"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutExistencia">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextLayoutCosto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ProductoCosto"

            android:inputType="number"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutValorInventario"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCosto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextLayoutValorInventario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ProductoInventario"

            android:inputType="number"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutValorInventario">

        <Button
            android:id="@+id/nuevoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetRight="8dp"
            android:text="@string/Nuevo"
            android:textSize="16sp" />

        <Button
            android:id="@+id/guardarbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetRight="8dp"
            android:text="@string/Guardar"
            android:textSize="16sp" />

        <Button
            android:id="@+id/eliminarbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Eliminar"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TituloFragmentRegistroProducto"
        android:textColor="@color/azul_claro"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>